--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+
+
   <title>React App</title>
 </head>
 
